添加电子发票和其他功能
Signed-off-by: 彭斌 <pengbin@gionee.com>